--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
-    "outDir": "lib"
+    "outDir": "lib",
+    "alwaysStrict": true,
+    "strictNullChecks": true
   },
   "include": ["./**/*.ts"],
   "exclude": [
